--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding:0px;
     list-style-type: none;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif ;
 }
 body{
     background:black;
@@ -21,27 +22,82 @@ header{
     width:100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    background-color: rgb(214, 214, 74);
+    justify-content: center;
+    background-color:rgba(48, 47, 47, 0.616);
+    border-radius: 10px;
     
 }
-.logo{
-    
+.logo img{
+    height:0px;
 }
 .menu{
     display: flex;
+    flex-direction: column;
+    text-align: center;
+    width:100%;
 }
-.menu li{
-    margin:10px;
+.menu a{
+    background-color: rgba(0, 0, 0, 0.473);
+    color:rgba(255, 238, 0, 0.74);
+    margin:3px;
+    padding:3px;
+    border-radius:10px;
 }
+a:hover{
+    color:rgb(255, 238, 0);
+    background-color: black;
+}
+
 .display_flex{
     display:flex;
     flex-direction: column;
     align-items: center;
 
 }
-.width_img{
-    width:85%;
-    margin:9px 0px;
+.conf-img{
+    width:90%;
+    margin:8px 0px;
+    text-align: center;
+    color:red;
     
+}
+
+@media screen and (min-width:360px){
+    header{
+        border-radius: 0px;
+    }
+    .menu{
+        flex-direction: row;
+        justify-content: center; 
+    }
+    .menu a{
+        background-color: transparent;
+        padding:8px 3px;
+    }
+}
+@media screen and (min-width:414px){
+    header{
+        justify-content: space-between;
+        background-color:rgba(48, 47, 47, 0.616);
+        padding:5px;
+        
+        
+    }
+    .logo img{
+        height:40px;
+        
+    }
+    .menu{
+        width:auto;
+        margin-right:10px;
+        background-color: transparent;
+    }
+}
+@media screen and (min-width:900px){
+    .menu a{
+        padding-left:30px;
+    }
+    .conf-img{
+        width:60%;
+    }
 }
