--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color:rgba(48, 47, 47, 0.616);
+    background-color:rgb(255, 217, 1);
     border-radius: 10px;
     
 }
@@ -38,9 +38,9 @@ header{
 }
 .menu a{
     background-color: rgba(0, 0, 0, 0.473);
-    color:rgba(255, 238, 0, 0.74);
-    margin:3px;
-    padding:3px;
+    color:rgb(255, 255, 255);
+    margin:5px;
+    padding:5px;
     border-radius:10px;
 }
 a:hover{
@@ -71,14 +71,22 @@ a:hover{
         justify-content: center; 
     }
     .menu a{
+        color:black;
         background-color: transparent;
+        margin:3px;
         padding:8px 3px;
+        
+    }
+    a:hover{
+        color:black;
+        font-weight: 600;
+        border-bottom: 5px solid black;
+        border-radius:20px;
     }
 }
 @media screen and (min-width:414px){
     header{
         justify-content: space-between;
-        background-color:rgba(48, 47, 47, 0.616);
         padding:5px;
         
         
@@ -93,9 +101,10 @@ a:hover{
         background-color: transparent;
     }
 }
-@media screen and (min-width:900px){
+@media screen and (min-width:768px){
     .menu a{
         padding-left:30px;
+        padding-right: 30px;
     }
     .conf-img{
         width:60%;
